# Pract1

./: .gitignore
Task1/: CMakeLists.txt
Task1/include/: Inside.h  Logic.h  Piecewise.h  Trigonometry.h
Task1/src/: Inside.cpp  Logic.cpp  Piecewise.cpp  Trigonometry.cpp
Task1/tests/: Inside.Tests.cpp  Logic.Tests.cpp  Piecewise.Tests.cpp  Trigonometry.Tests.cpp
